--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                     <h2 class="question-text">What does HTML stand for?</h2>
                     <div class="option-list">
-                        <div class="option">
+                        <!--<div class="option">
                             <span>A. Hyper Type Multi Language</span>
                         </div>
                         <div class="option">
@@ -42,14 +42,32 @@
                         </div>
                         <div class="option">
                             <span>D. Home Text Multi Language</span>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="quiz-footer">
                         <span class="question-total">1 of 5 Questions</span>
-                        <div class="next-btn">Next</div>
+                        <button class="next-btn">Next</button>
                     </div>
                 </div>
+
+                
+            <div class="result-box">
+                <h2>Quiz Result!</h2>
+                <div class="percentage-container">
+                    <div class="circular-progress">
+                        <span class="progress-value">0%</span>
+                    </div>
+
+                    <span class="score-text">Your Score 0 out of 5</span>
+                </div>
+
+                <div class="buttons">
+                    <button class="tryAgain-btn">Try Again</button>
+                    <button class="goHome-btn">Go to Home</button>
+                </div>
+            </div>
+            
             </section>
 
             <section class="home"> 
