--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <section class="quiz-section">
                 <div class="quiz-box">
-                    <h1>Codehal Quiz</h1>
+                    <h1>Ideator Quiz</h1>
                     <div class="quiz-header">
                         <span>Quiz Website</span>
                         <span class="header-score">Score: 0/5</span>
@@ -67,7 +67,7 @@
                     <button class="goHome-btn">Go to Home</button>
                 </div>
             </div>
-            
+
             </section>
 
             <section class="home"> 
