--- a/index.html
+++ b/index.html
@@ -62,18 +62,13 @@
                     <span class="score-text">Your Score 0 out of 5</span>
                 </div>
 
-                <div class="buttons">
-                    <button class="tryAgain-btn">Try Again</button>
-                    <button class="goHome-btn">Go to Home</button>
-                </div>
-            </div>
-
+               
             </section>
 
             <section class="home"> 
                 <div class="home-content">
                     <h1>Quiz website</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis impedit itaque hic sit. Accusamus odio incidunt facilis hic exercitationem deleniti minus quibusdam deserunt unde, fugit placeat quisquam commodi laudantium id.</p>
+                    <p>"Step into a world of quizzes! Dive into exciting topics, challenge your mind, and discover something new. Explore our diverse range of quizzes, from trivia to thought-provoking puzzles. Let the fun begin as you embark on an interactive journey of learning and entertainment!"</p>
                     <button class="start-btn">Start Quiz</button>
                 </div>
             </section>
@@ -82,14 +77,14 @@
 
     <div class="popup-info">
         <h2>Quiz Guide</h2>
-        <span class="info">1. Lorem ipsum dolor sit, amet consectetur adipisicing.</span>
-        <span class="info">2. Lorem ipsum dolor sit, amet consectetur adipisicing.</span>
-        <span class="info">3. Lorem ipsum dolor sit, amet consectetur adipisicing.</span>
-        <span class="info">4. Lorem ipsum dolor sit, amet consectetur adipisicing.</span>
-        <span class="info">5. Lorem ipsum dolor sit, amet consectetur adipisicing.</span>
+        <span class="info">1. Select a quiz category to begin.</span>
+        <span class="info">2. Answer each question before proceeding.</span>
+        <span class="info">3. Click 'Next' to move forward.</span>
+        <span class="info">4. Review answers before submission.</span>
+        <span class="info">5. Enjoy the quiz experience!</span>
 
         <div class="btn-group">
-            <button class="info-btn exit-btn">Cancel</button>
+            <button class="info-btn exit-btn">Exit</button>
             <a href="#" class="info-btn continue-btn">Continue</a>
         </div>
     </div>
